<resources>
    <string name="app_name">高新报名助手</string>
    <string name="toolbar_location">黔南布依苗族自治州-都匀</string>
    <string name="username">用户名</string>
    <string name="PhoneAndUsername">手机号或用户名</string>
    <string name="password">密码</string>
    <string name="newPassword">新密码</string>
    <string name="weChat">微信快捷登录</string>
    <string name="hot_search">热门搜索</string>
    <string name="clear_all">清空</string>
    <string name="history_search">搜索历史</string>
    <string name="QQ">QQ快捷登录</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="MobilePhoneRegister">手机号注册</string>
    <string name="pleaseInputPhone">手机号码</string>
    <string name="pleaseInputPhoneCode">输入6位数验证码</string>
    <string name="login">登\t\t\t\t\t录</string>
    <string name="nav_view_login_show">登\t\t录</string>
    <string name="register">注\t\t\t\t\t册</string>
    <string name="new_fresh">刷新</string>
    <string name="no_account">没有账号？去注册</string>
    <string name="sign_query">报名查询</string>
    <string name="sign_Encyclopedias">报名百科</string>
    <string name="update_password">密码修改</string>
    <string name="My_Mine">我的资料</string>
    <string name="sign_query_eidt_code">请输入凭证号</string>
    <string name="enter_password_again">再输入一次密码</string>
    <string name="have_account">已有账户？去登录</string>
    <string name="rememberPasswrod">想起密码？去登录</string>
    <string name="qr_sweep">扫一扫</string>
    <string name="drawer_menu_info_school">进入官网</string>
    <string name="drawer_menu_see_calendar">查看日历</string>
    <string name="drawer_menu_night_mode">夜间模式</string>
    <string name="drawer_menu_about_author">关于作者</string>
    <string name="drawer_menu_logout_title">退出登录</string>
    <string name="drawer_menu_setting_title">软件设置</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="setting_cache">自动缓存</string>
    <string name="setting_normal">通用设置</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_other">其它设置</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清除缓存</string>
    <string name="scale_down_show_behavior">com.zhangsong.com.signup_system.behavior.FloatingActionButton.ScaleDownShowBehavior</string>
    <string name="bottom_behavior">com.zhangsong.com.signup_system.behavior.BottomNavigation.BottomNavigationBehavior</string>
    <string name="content">要实现这样的效果, 需要用到:
CoordinatorLayout和AppbarLayout的配合, 以及实现了NestedScrollView的布局或控件.
AppbarLayout是一种支持响应滚动手势的app bar布局, CollapsingToolbarLayout则是专门用来实现子布局内不同元素响应滚动细节的布局.
与AppbarLayout组合的滚动布局(RecyclerView, NestedScrollView等),需要设置 app:layout_behavior = "@string/appbar_scrolling_view_behavior" .没有设置的话, AppbarLayout将不会响应滚动布局的滚动事件.
我们回到再前面一章"Toolbar的使用", 将布局改动如下:
作者：朋朋彭哥
链接：https://www.jianshu.com/p/bbc703a0015e
來源：简书
        要实现这样的效果, 需要用到:
CoordinatorLayout和AppbarLayout的配合, 以及实现了NestedScrollView的布局或控件.
AppbarLayout是一种支持响应滚动手势的app bar布局, CollapsingToolbarLayout则是专门用来实现子布局内不同元素响应滚动细节的布局.
与AppbarLayout组合的滚动布局(RecyclerView, NestedScrollView等),需要设置 app:layout_behavior = "@string/appbar_scrolling_view_behavior" .没有设置的话, AppbarLayout将不会响应滚动布局的滚动事件.
我们回到再前面一章"Toolbar的使用", 将布局改动如下:
作者：朋朋彭哥
        要实现这样的效果, 需要用到:
CoordinatorLayout和AppbarLayout的配合, 以及实现了NestedScrollView的布局或控件.
AppbarLayout是一种支持响应滚动手势的app bar布局, CollapsingToolbarLayout则是专门用来实现子布局内不同元素响应滚动细节的布局.
与AppbarLayout组合的滚动布局(RecyclerView, NestedScrollView等),需要设置 app:layout_behavior = "@string/appbar_scrolling_view_behavior" .没有设置的话, AppbarLayout将不会响应滚动布局的滚动事件.
我们回到再前面一章"Toolbar的使用", 将布局改动如下:
作者：朋朋彭哥
        要实现这样的效果, 需要用到:
CoordinatorLayout和AppbarLayout的配合, 以及实现了NestedScrollView的布局或控件.
AppbarLayout是一种支持响应滚动手势的app bar布局, CollapsingToolbarLayout则是专门用来实现子布局内不同元素响应滚动细节的布局.
与AppbarLayout组合的滚动布局(RecyclerView, NestedScrollView等),需要设置 app:layout_behavior = "@string/appbar_scrolling_view_behavior" .没有设置的话, AppbarLayout将不会响应滚动布局的滚动事件.
我们回到再前面一章"Toolbar的使用", 将布局改动如下:
作者：朋朋彭哥
简书著作权归作者所有，任何形式的转载都请联系作者获得授权并注明出处。要实现这样的效果, 需要用到:
CoordinatorLayout和AppbarLayout的配合, 以及实现了NestedScrollView的布局或控件.
AppbarLayout是一种支持响应滚动手势的app bar布局, CollapsingToolbarLayout则是专门用来实现子布局内不同元素响应滚动细节的布局.
与AppbarLayout组合的滚动布局(RecyclerView, NestedScrollView等),需要设置 app:layout_behavior = "@string/appbar_scrolling_view_behavior" .没有设置的话, AppbarLayout将不会响应滚动布局的滚动事件.

我们回到再前面一章"Toolbar的使用", 将布局改动如下:

作者：朋朋彭哥
链接：https://www.jianshu.com/p/bbc703a0015e
來源：简书
简书著作权归作者所有，任何形式的转载都请联系作者获得授权并注明出处。要实现这样的效果, 需要用到:
CoordinatorLayout和AppbarLayout的配合, 以及实现了NestedScrollView的布局或控件.
AppbarLayout是一种支持响应滚动手势的app bar布局, CollapsingToolbarLayout则是专门用来实现子布局内不同元素响应滚动细节的布局.
与AppbarLayout组合的滚动布局(RecyclerView, NestedScrollView等),需要设置 app:layout_behavior = "@string/appbar_scrolling_view_behavior" .没有设置的话, AppbarLayout将不会响应滚动布局的滚动事件.
我们回到再前面一章"Toolbar的使用", 将布局改动如下:
作者：朋朋彭哥
链接：https://www.jianshu.com/p/bbc703a0015e
來源：简书
简书著作权归作者所有，任何形式的转载都请联系作者获得授权并注明出处。</string>
    <string name="signqq">同学，您已报名成功！请关注高新报名QQ群获取最新信息通知，感谢配合！\n\t\t\t\t\t————QQ群号：477268378</string>
    <string name="menu_sousuo">搜索</string>
    <string name="menu_qr_sweep">扫一扫</string>
    <string name="nn_browser">在浏览器打开</string>
    <string name="i_kown">我知道了</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="tv_signup_title">填写报名资料</string>
    <string name="tv_signup_notes">报  名  须  知</string>
    <string name="signup_name">姓名</string>
    <string name="signup_sex">性别</string>
    <string name="signup_nation">民族</string>
    <string name="signup_id_card">身份证号</string>
    <string name="signup_input_id_card">请填写</string>
    <string name="signup_culture_degree">文化程度</string>
    <string name="signup_politics_face">政治面貌</string>
    <string name="signup_contact_telephone">联系电话</string>
    <string name="signup_contact_input_telephone">请填写</string>
    <string name="signup_declare_occupation">申报职业</string>
    <string name="signup_declare_hrade">申报级别</string>
    <string name="signup_Two_exams">是否二考</string>
    <string name="signup_examination_time">考试时间</string>
    <string name="signup_voucher_number">凭证号码</string>
    <string name="signup_work_company">工作单位</string>
    <string name="signup_remarks">备注</string>
    <string name="signup_submission">提交</string>
    <string name="signup_fillin">请填写</string>
    <string name="signup_whetherornot">是/否</string>
    <string name="signup_name_input_name">请填写</string>
    <string name="signup_next">下一步</string>
    <string name="signup_back">上一步</string>
    <string name="sign_tv_notes">\n\t\t\t【报考科目】\n\n\t\t一、办公软件应用（office2010）\n\n\t\t二、图像图像处理（PhotoShopCS5）
        \n\n\t\t三、因特网应用高级（ASP.net）\n\n\t\t四、AutoCAD2010高级（建筑）\n\n\t\t五、AutoCAD2005高级（建筑）
        \n\n\t\t六、AutoCAD2010高级（机械）\n\n\t\t\t【报考科目】\n\n\t\t【报考时间】：根据黔南职院通知确定 \n\n\t\t【报考费用】：
        200元/人（微信支付）\n\n\t\t【报考地址】：黔南职院xx机房 \n\n\t\t【咨询电话】：123456789 \n\n\t\t【上班时间】：
        周一至周五（节假日休息）\n\n\t\t【注意事项】：考生不得重复报考同一级别同一科目多次，不能同时报考同
        一级别的两个以 上科目，否则黔南职院将不予接收报名数据。\n\n\t\t【考试成绩查询】：查询模块输入姓名+身份证验证查询</string>
    <string name="main_pay_total">合计: &lt;font color=\'#FF3003\'&gt;%.0f&lt;/font&gt;元</string>
    <string name="main_pay_total1">合计: &lt;font color=\'#FF3003\'&gt;%.2f&lt;/font&gt;元</string>
    <string name="orderlist_no">凭证号码: %s</string>
    <string name="orderlist_amout">缴费金额 &lt;font color=\'#FF3003\'&gt;￥%s&lt;/font&gt;元</string>
    <string name="main_topay_fail">缴费金额不正确</string>
    <string name="main_order_subject">支付标题</string>
    <string name="main_order_body">支付主体</string>
    <string name="main_pay_success">报名成功</string>
    <string name="main_Query_success">查询成功，请各位同学认真核对！</string>
    <string name="main_pay_fail">报名失败</string>
    <string name="main_pay_cancel">报名取消</string>
    <string name="main_pay_invalid_channel">支付渠道未开通</string>
    <string name="dialog_pay_fail">支付失败，请稍后再试</string>
    <string name="time_next">Next</string>
    <string name="time_prev">Previous</string>
    <string-array name="weeks">
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>日</item>
    </string-array>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="signName">您还没有填写姓名！</string>
    <string name="signSex">您还没有填写性别！</string>
    <string name="signNation">您还没有填写民族！</string>
    <string name="signIdCard">您还没有填写身份证号码！</string>
    <string name="signCultureDegree">您还没有填写文化程度！</string>
    <string name="signPoliticsFace">您还没有填写政治面貌！</string>
    <string name="signContactTelephone">您还没有填写联系电话！</string>
    <string name="signDeclareOccupation">您还没有填写申报职业！</string>
    <string name="signDeclareHrade">您还没有填写申报级别！</string>
    <string name="signTwoExams">您还没有填写是否二考！</string>
    <string name="signExaminationTime">您还没有填写考试时间！</string>
    <string name="signWorkCompany">您还没有填写工作单位！</string>
    <string name="prompt">提示</string>
    <string name="SMS_Code_Get_Success">验证码获取成功，请注意查收！</string>
    <string name="close_click_again">再次点击退出应用</string>
    <string name="Query_networkConnError">查询超时，请检查您的网络</string>
    <string name="networkConnError">服务器连接失败，请检查您的网络</string>
    <string name="SMSCodeError">验证码不正确或已使用过失效了！</string>
    <string name="requestOvertime">服务器发呆啦...验证超时，请稍候再试！</string>
    <string name="SignVerification">验证码不匹配，请认真核查！</string>
    <string name="SignQueryCode">凭证号不匹配，请认真核查！</string>
    <string name="unknown_error">未知错误！请在关于作者获取开发者资料反馈联系！</string>
    <string name="Success_Notes">\n\n\t\t\t\t须知：请妥善保管随机凭证号！(建议截图上传微云或其他云端)此页面关闭或重启应用后，
        将不能再次通过您刚才填写的“身份证号码”和“手机号码”报名！此凭证号，方便考务人员管理同学们的报名信息,请知悉！“如果其他同学用你已登账户进行报名，重启应用即可！”\n\t\t\t\t如有遗忘，请联系开发者找回\n\t\t\t\t联系方式：\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t微信：zs1210762604 \n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t腾讯QQ：1210762604</string>
    <string name="logout">退出登录</string>
    <string name="link_start">登录</string>
    <string name="login_successful">登录成功</string>
    <string name="login_error">登录失败</string>
    <string name="login_error_name_or_password_incorrect">用户名或密码错误，密码区分大小写！</string>
    <string name="registerAccount">去注册</string>
    <string name="prompt_userName">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_confirm">确认密码</string>
    <string name="password_reset_Success">密码重置成功！</string>
    <string name="mine">个人资料</string>
    <string name="please_input_user_name">请输入账号</string>
    <string name="please_input_user_name_password">请输入用户名和密码</string>
    <string name="please_input_Correct_Phone_resetPassword">请输入正确手机号或新密码! 提醒:密码必须包含大小写字母和数字的组合，不能使用特殊字符，长度在 8-10 之间！</string>
    <string name="please_input_Correct_Phone">请输入正确手机号或密码! 提醒:密码必须包含大小写字母和数字的组合，不能使用特殊字符，长度在 8-10 之间！</string>
    <string name="please_input_Correct_SMS_Code">请输入6位数的验证码</string>
    <string name="night_mode">夜间模式待实现</string>
    <string name="Phone_And_UsernameNo_Null">请输入手机号、用户名</string>
    <string name="Username_And_Pwd_No_Null">请输入用户名、密码</string>
    <string name="Username_And_SMS_Code_No_Null">请输入用户名、验证码</string>
    <string name="Pwd_And_SMS_Code_No_Null">请输入密码、验证码</string>
    <string name="Phone_And_Pwd_And_SMS_Code_No_Null">请输入手机号、密码、验证码</string>
    <string name="Phone_And_Pwd_AndNo_Null">请输入手机号、密码</string>
    <string name="Username_Pwd_AndNo_Null">请输入用户名、密码、验证码</string>
    <string name="Phone_And_SMS_Code_No_Null">请输入手机号、验证码</string>
    <string name="Phone_And_No_Null">请输入手机号</string>
</resources>