<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">
    <!--内容布局-->
    <ImageView
        android:id="@+id/iv_touxiang"
        android:layout_marginTop="@dimen/dp_70"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:src="@mipmap/register_touxiang" />
    <TextView
        android:id="@+id/welcome"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:layout_below="@id/iv_touxiang"
        android:text="@string/app_name"
        android:textColor="@color/LoginInputBackground"
        android:textSize="@dimen/sp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_register_username"
        android:layout_below="@id/welcome"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30"
        android:textColorHint="@color/LoginInputBackground"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:backgroundTint="@color/White"
            android:textColorHint="@color/LoginInputBackground"
            android:textColor="@color/viewBackground"
            android:id="@+id/edit_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_register_password"
        android:textColorHint="@color/LoginInputBackground"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30"
        android:layout_below="@+id/til_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:focusable="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/Pink"
        app:counterMaxLength="18"
        android:focusableInTouchMode="true">
        <EditText
            android:backgroundTint="@color/White"
            android:textColorHint="@color/LoginInputBackground"
            android:textColor="@color/viewBackground"
            android:id="@+id/edit_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_true_password"
        android:layout_below="@+id/til_register_password"
        android:textColorHint="@color/LoginInputBackground"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:focusable="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/Pink"
        app:counterMaxLength="18"
        android:focusableInTouchMode="true">
        <EditText
            android:backgroundTint="@color/White"
            android:textColorHint="@color/LoginInputBackground"
            android:textColor="@color/viewBackground"
            android:id="@+id/edit_register_true_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password_again"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <com.zhangsong.com.signup_system.view.ProgressButton
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@+id/til_true_password"
        android:id="@+id/ptn_register"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_50" />
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/ptn_register"
        android:textColor="@color/viewBackground"
        android:id="@+id/tv_go_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/have_account"
        android:textSize="@dimen/sp_15" />
</RelativeLayout>