<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_login_show"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">
    <!--内容布局-->
    <ImageView
        android:id="@+id/iv_touxiang"
        android:layout_marginTop="@dimen/dp_70"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:src="@mipmap/login_touxiang" />
    <TextView
        android:id="@+id/welcome"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:layout_below="@id/iv_touxiang"
        android:text="@string/app_name"
        android:textColor="@color/LoginInputBackground"
        android:textSize="@dimen/sp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--TextInputLayout 的相关属性-->
    <!--1.app:hintAnimationEnabled="true"//设置是否可以使用动画，默认是true-->
    <!--2.app:hintTextAppearance="@style/myStyle"//设置hint的文本属性，改变hint文字的大小颜色等属性-->
    <!--app:counterEnabled="true"//设置是否可以开启计数器，默认是false-->
    <!--app:counterOverflowTextAppearance="" 计算器越位后的文字颜色和大小-->
    <!--app:counterMaxLength=""计算器的最大字数限制-->
    <!--app:errorEnabled="true" 是否允许错误提示-->
    <!--app:errorTextAppearance="" 错误提示的文字大小和颜色-->
    <!--app:passwordToggleEnabled="true"显示小眼睛-->
    <!--app:passwordToggleTint="@color/colorAccent" 给小眼睛上色-->
    <!--app:passwordToggleTintMode="multiply"小眼睛的显示方式-->
    <!--需要注意的是：如果想要显示小眼睛，就需要在 TextInputEditText 或者 EditText 中设置 为密码格式。-->
    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/welcome"
        android:layout_marginTop="@dimen/dp_50"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30"
        android:textColorHint="@color/LoginInputBackground"
        android:id="@+id/til_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <EditText
            android:maxLength="11"
            android:backgroundTint="@color/White"
            android:textColorHint="@color/LoginInputBackground"
            android:textColor="@color/viewBackground"
            android:id="@+id/edit_login_usernameOrPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>
 <android.support.design.widget.TextInputLayout
     android:textColorHint="@color/LoginInputBackground"
     android:paddingLeft="@dimen/dp_30"
     android:paddingRight="@dimen/dp_30"
     android:id="@+id/til_password"
     android:layout_below="@+id/til_login_username"
     app:counterMaxLength="18"
     app:passwordToggleTint="@color/Pink"
     app:passwordToggleTintMode="multiply"
     app:passwordToggleEnabled="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/dp_15"
     android:focusable="true"
     android:focusableInTouchMode="true">
     <EditText
         android:backgroundTint="@color/White"
         android:textColorHint="@color/LoginInputBackground"
         android:textColor="@color/viewBackground"
         android:id="@+id/edit_login_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password"
         android:maxLength="10"
         android:inputType="textPassword" />
 </android.support.design.widget.TextInputLayout>
    <TextView
        android:textColor="@color/viewBackground"
        android:paddingEnd="@dimen/dp_30"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/til_password"
        android:id="@+id/tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/forgetpassword"
        android:textSize="@dimen/text_size_15"
        tools:ignore="RtlSymmetry" />
    <com.zhangsong.com.signup_system.view.ProgressButton
        android:layout_marginTop="@dimen/dp_5"
        android:layout_below="@+id/tv_forget_pwd"
        android:id="@+id/ptn_login"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_50" />
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/ptn_login"
        android:textColor="@color/White"
        android:id="@+id/tv_go_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_account"
        android:textSize="@dimen/sp_15" />
    <LinearLayout
        android:paddingBottom="@dimen/dp_20"
        android:id="@+id/thirdparty"
        android:layout_above="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/viewBackground" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/viewBackground"
            android:text="第三方账号登录"
            android:textSize="15sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/viewBackground" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_logo"
        android:layout_above="@+id/ll_tv_login_mode"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40">
        <ImageView
            android:id="@+id/iv_login_wx"
            android:layout_weight="1"
            android:src="@mipmap/wx_logo"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40" />
        <ImageView
            android:id="@+id/iv_login_qq"
            android:layout_weight="1"
            android:src="@mipmap/qq_logo"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40" />
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/ll_tv_login_mode"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/viewBackground"
            android:textSize="@dimen/text_size_13"
            android:gravity="center"
            android:text="@string/weChat"
            android:layout_weight="1"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40" />
        <TextView
            android:textColor="@color/viewBackground"
            android:textSize="@dimen/text_size_13"
            android:gravity="center"
            android:text="@string/QQ"
            android:layout_weight="1"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40" />
    </LinearLayout>
</RelativeLayout>

