<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_reset_show"
    android:background="@drawable/bg_login">
    <!--内容布局-->
    <ImageView
        android:id="@+id/iv_touxiang"
        android:layout_marginTop="@dimen/dp_70"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:src="@mipmap/register_touxiang" />
    <TextView
        android:id="@+id/welcome"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:layout_below="@id/iv_touxiang"
        android:text="@string/app_name"
        android:textColor="@color/LoginInputBackground"
        android:textSize="@dimen/sp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/dp_50"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30"
        android:layout_below="@id/welcome"
        android:textColorHint="@color/LoginInputBackground"
        android:id="@+id/til_input_resetPassword_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <EditText
            android:backgroundTint="@color/White"
            android:textColorHint="@color/LoginInputBackground"
            android:textColor="@color/viewBackground"
            android:id="@+id/edit_input_resetPassword_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pleaseInputPhone"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            tools:ignore="TextFields" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        app:passwordToggleTint="@color/Pink"
        app:passwordToggleTintMode="multiply"
        app:passwordToggleEnabled="true"
        android:layout_below="@id/til_input_resetPassword_phone"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30"
        android:textColorHint="@color/LoginInputBackground"
        android:id="@+id/til_input_password_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <EditText
            android:backgroundTint="@color/White"
            android:textColorHint="@color/LoginInputBackground"
            android:textColor="@color/viewBackground"
            android:id="@+id/edit_input_new_password_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            android:maxLength="10"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:id="@+id/ll_yzm_reset"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30"
        android:layout_below="@id/til_input_password_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:textColorHint="@color/LoginInputBackground"
            android:id="@+id/til_input_code_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <EditText
                android:backgroundTint="@color/White"
                android:textColorHint="@color/LoginInputBackground"
                android:textColor="@color/viewBackground"
                android:id="@+id/edit_input_code_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pleaseInputPhoneCode"
                android:inputType="phone"
                android:maxLength="6"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_yzm_reset"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/Black"
            android:background="@drawable/btn_bg_phone_code"
            android:layout_gravity="center"
            android:text="获取验证码"
            android:layout_weight="1.3"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40" />
    </LinearLayout>
    <com.zhangsong.com.signup_system.view.ProgressButton
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/ll_yzm_reset"
        android:id="@+id/ptn_yzm_reset"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_50" />
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/ptn_yzm_reset"
        android:textColor="@color/viewBackground"
        android:id="@+id/tv_go_login_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rememberPasswrod"
        android:textSize="@dimen/sp_15" />
</RelativeLayout>